--- a/event_manager/requirements.txt
+++ b/event_manager/requirements.txt
@@ -6,6 +6,10 @@
 #
 asgiref==3.8.1
     # via django
+attrs==25.3.0
+    # via
+    #   jsonschema
+    #   referencing
 crispy-bootstrap5==2024.10
     # via -r .\requirements.in
 django==5.1.7
@@ -13,15 +17,44 @@ django==5.1.7
     #   -r .\requirements.in
     #   crispy-bootstrap5
     #   django-crispy-forms
+    #   djangorestframework
+    #   drf-spectacular
+    #   drf-spectacular-sidecar
 django-crispy-forms==2.3
     # via
     #   -r .\requirements.in
     #   crispy-bootstrap5
 django-environ==0.12.0
     # via -r .\requirements.in
+djangorestframework==3.16.0
+    # via
+    #   -r .\requirements.in
+    #   drf-spectacular
+drf-spectacular==0.28.0
+    # via -r .\requirements.in
+drf-spectacular-sidecar==2025.4.1
+    # via -r .\requirements.in
+inflection==0.5.1
+    # via drf-spectacular
+jsonschema==4.23.0
+    # via drf-spectacular
+jsonschema-specifications==2024.10.1
+    # via jsonschema
+pyyaml==6.0.2
+    # via drf-spectacular
+referencing==0.36.2
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+rpds-py==0.24.0
+    # via
+    #   jsonschema
+    #   referencing
 sqlparse==0.5.3
     # via django
 tzdata==2025.2
     # via django
+uritemplate==4.1.1
+    # via drf-spectacular
 whitenoise==6.9.0
     # via -r .\requirements.in
